--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,8 +8,10 @@ Django==4.2.7
 django-extensions==3.2.3
 django-filter==23.5
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 executing==2.0.1
 flake8==7.0.0
+inflection==0.5.1
 ipython==8.20.0
 isort==5.13.2
 jedi==0.19.1
@@ -28,9 +30,11 @@ pycodestyle==2.11.1
 pyflakes==3.2.0
 Pygments==2.17.2
 pytz==2023.3.post1
+PyYAML==6.0.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
 traitlets==5.14.1
 tzdata==2023.4
+uritemplate==4.1.1
 wcwidth==0.2.13
