Postgres and mongo db added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ version: "3"
 
 services:
     backend:
-#      image: blog_image
         build: ./
         container_name: blog_container
         working_dir: /Blog
+        restart: always
         ports:
           - 8010:8000
         volumes:
@@ -20,21 +20,53 @@ services:
           - ./commands/start_server_dev.sh
         env_file:
           - .env
-
         depends_on:
-              - postgres
+          - postgres
+          - redis
 
     postgres:
-      image: postgres:16.1
-      ports:
-        - 5432:5432
+        image: postgres:16.1
+        ports:
+          - 5432:5432
+        volumes:
+          - pg_data:/var/lib/postgresql/data
+        env_file:
+          - .env
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: pgadmin_container
+        restart: on-failure
+        ports:
+          - 5000:80
+        volumes:
+          - pgadmin_data:/var/lib/pgadmin
+        env_file:
+          - .env
+        depends_on:
+          - postgres
+
+    mongo:
+      image: mongo
+      container_name: mongo
+      restart: always
+      env_file: .env
+      environment:
+        - MONGO_INITDB_ROOT_USERNAME=root
+        - MONGO_INITDB_ROOT_PASSWORD=root
+        - MONGO_INITDB_DATABASE=${MONGO_DB_NAME}
+        - MONGO_INITDB_USERNAME=${MONGO_DB_USERNAME}
+        - MONGO_INITDB_PASSWORD=${MONGO_DB_PASSWORD}
       volumes:
-        - pg_data:/var/lib/postgresql/data
-      env_file:
-        - .env
+        - ${PWD}/_data/mongo:/data/db
+        - ${PWD}/docker/_mongo/fixtures:/import
+        - ${PWD}/docker/_mongo/scripts/init.sh:/docker-entrypoint-initdb.d/setup.sh
+      ports:
+        - 27017:27017
+
 
 volumes:
   pg_data: { }
+  pgadmin_data: { }
 
 
 
