--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+amqp==5.2.0
 asgiref==3.7.2
 asttokens==2.4.1
+billiard==4.2.0
 black==23.12.1
+celery==5.3.6
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 cryptography==41.0.7
 decorator==5.1.1
 defusedxml==0.7.1
-Django==4.2.7
+Django==4.1.13
 django-extensions==3.2.3
 django-filter==23.5
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+djongo==1.3.6
 djoser==2.2.2
+dnspython==2.5.0
 drf-yasg==1.21.7
 executing==2.0.1
 flake8==7.0.0
@@ -24,6 +32,7 @@ inflection==0.5.1
 ipython==8.20.0
 isort==5.13.2
 jedi==0.19.1
+kombu==5.3.5
 Markdown==3.5.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
@@ -37,12 +46,16 @@ pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
+psycopg==3.1.17
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pure-eval==0.2.2
 pycodestyle==2.11.1
 pycparser==2.21
 pyflakes==3.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
+pymongo==4.6.1
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3.post1
@@ -52,11 +65,12 @@ requests-oauthlib==1.3.1
 six==1.16.0
 social-auth-app-django==5.4.0
 social-auth-core==4.5.1
-sqlparse==0.4.4
+sqlparse==0.2.4
 stack-data==0.6.3
 traitlets==5.14.1
+typing_extensions==4.9.0
 tzdata==2023.4
 uritemplate==4.1.1
 urllib3==2.1.0
+vine==5.1.0
 wcwidth==0.2.13
-psycopg2-binary==2.9.9
